--- a/Sadanghaeng/Sadanghaeng/Base.lproj/Main.storyboard
+++ b/Sadanghaeng/Sadanghaeng/Base.lproj/Main.storyboard
@@ -382,6 +382,7 @@
                         <viewControllerLayoutGuide type="bottom" id="blb-bI-QnH"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="YVq-Cx-7CC">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="800"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZxJ-D6-Mr5">
@@ -390,13 +391,13 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MmT-m1-k9q">
                                         <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="COq-lL-5ua">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="안녕 반가워 안녕 안녕 안녕~~~~" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="COq-lL-5ua">
                                                 <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="18" id="2Oh-Z6-Wpg"/>
                                                 </constraints>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-SemiBold" family="Apple SD Gothic Neo" pointSize="16"/>
+                                                <color key="textColor" red="0.99607843137254903" green="0.31764705882352939" blue="0.12156862745098039" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                                 <variation key="default">
                                                     <mask key="constraints">
@@ -409,34 +410,94 @@
                                                     </mask>
                                                 </variation>
                                             </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="글쓴이" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ngh-5k-IH0">
+                                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-SemiBold" family="Apple SD Gothic Neo" pointSize="14"/>
+                                                <color key="textColor" red="0.51764705882352935" green="0.51764705882352935" blue="0.51764705882352935" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9wS-zb-vj8">
+                                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                                <color key="backgroundColor" red="0.98039215690000003" green="0.98039215690000003" blue="0.98039215690000003" alpha="1" colorSpace="calibratedRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="9wS-zb-vj8" secondAttribute="height" multiplier="49:38" id="RPi-ly-nWB">
+                                                        <variation key="widthClass=compact" constant="228.07894736842104"/>
+                                                    </constraint>
+                                                    <constraint firstAttribute="height" constant="266" id="vdY-EG-F3c">
+                                                        <variation key="widthClass=compact" constant="93"/>
+                                                    </constraint>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Medium" family="Apple SD Gothic Neo" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                <variation key="default">
+                                                    <mask key="constraints">
+                                                        <exclude reference="RPi-ly-nWB"/>
+                                                        <exclude reference="vdY-EG-F3c"/>
+                                                    </mask>
+                                                </variation>
+                                                <variation key="widthClass=compact">
+                                                    <mask key="constraints">
+                                                        <include reference="RPi-ly-nWB"/>
+                                                        <include reference="vdY-EG-F3c"/>
+                                                    </mask>
+                                                </variation>
+                                            </textView>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
+                                            <constraint firstItem="9wS-zb-vj8" firstAttribute="leading" secondItem="Ngh-5k-IH0" secondAttribute="trailing" constant="-36.5" id="LR5-1t-ebq">
+                                                <variation key="widthClass=compact" constant="-42"/>
+                                            </constraint>
                                             <constraint firstAttribute="trailing" secondItem="COq-lL-5ua" secondAttribute="trailing" constant="16" id="QEq-hD-krJ"/>
                                             <constraint firstItem="COq-lL-5ua" firstAttribute="leading" secondItem="MmT-m1-k9q" secondAttribute="leading" constant="24" id="QkQ-Fa-d1c"/>
                                             <constraint firstItem="COq-lL-5ua" firstAttribute="top" secondItem="MmT-m1-k9q" secondAttribute="top" constant="32" id="XfC-W7-yJ3"/>
+                                            <constraint firstItem="Ngh-5k-IH0" firstAttribute="leading" secondItem="MmT-m1-k9q" secondAttribute="leading" constant="24" id="bgt-ky-M7p"/>
                                             <constraint firstAttribute="height" constant="800" id="gZU-zV-gie"/>
+                                            <constraint firstItem="9wS-zb-vj8" firstAttribute="leading" secondItem="Ngh-5k-IH0" secondAttribute="leading" id="gqK-4m-3bw">
+                                                <variation key="widthClass=compact" constant="-5"/>
+                                            </constraint>
+                                            <constraint firstItem="9wS-zb-vj8" firstAttribute="centerX" secondItem="MmT-m1-k9q" secondAttribute="centerX" id="nqM-e7-BDr">
+                                                <variation key="widthClass=compact" constant="1.5"/>
+                                            </constraint>
+                                            <constraint firstItem="Ngh-5k-IH0" firstAttribute="top" secondItem="COq-lL-5ua" secondAttribute="bottom" constant="8" id="p3R-0F-Lew"/>
+                                            <constraint firstItem="9wS-zb-vj8" firstAttribute="top" secondItem="Ngh-5k-IH0" secondAttribute="bottom" constant="13" id="vFm-Wo-VqM"/>
                                         </constraints>
                                         <variation key="default">
                                             <mask key="subviews">
                                                 <exclude reference="COq-lL-5ua"/>
+                                                <exclude reference="Ngh-5k-IH0"/>
+                                                <exclude reference="9wS-zb-vj8"/>
                                             </mask>
                                             <mask key="constraints">
                                                 <exclude reference="gZU-zV-gie"/>
                                                 <exclude reference="QEq-hD-krJ"/>
                                                 <exclude reference="QkQ-Fa-d1c"/>
                                                 <exclude reference="XfC-W7-yJ3"/>
+                                                <exclude reference="bgt-ky-M7p"/>
+                                                <exclude reference="p3R-0F-Lew"/>
+                                                <exclude reference="LR5-1t-ebq"/>
+                                                <exclude reference="gqK-4m-3bw"/>
+                                                <exclude reference="nqM-e7-BDr"/>
+                                                <exclude reference="vFm-Wo-VqM"/>
                                             </mask>
                                         </variation>
                                         <variation key="widthClass=compact">
                                             <mask key="subviews">
                                                 <include reference="COq-lL-5ua"/>
+                                                <include reference="Ngh-5k-IH0"/>
+                                                <include reference="9wS-zb-vj8"/>
                                             </mask>
                                             <mask key="constraints">
                                                 <include reference="gZU-zV-gie"/>
                                                 <include reference="QEq-hD-krJ"/>
                                                 <include reference="QkQ-Fa-d1c"/>
                                                 <include reference="XfC-W7-yJ3"/>
+                                                <include reference="bgt-ky-M7p"/>
+                                                <include reference="p3R-0F-Lew"/>
+                                                <include reference="LR5-1t-ebq"/>
+                                                <include reference="gqK-4m-3bw"/>
+                                                <include reference="nqM-e7-BDr"/>
+                                                <include reference="vFm-Wo-VqM"/>
                                             </mask>
                                         </variation>
                                     </view>
@@ -560,6 +621,7 @@
                                 <exclude reference="pkV-Gg-Hgf"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="nUL-UK-Mie"/>
                                 <exclude reference="9M4-nS-Kb7"/>
                                 <exclude reference="SOh-b8-MrE"/>
                                 <exclude reference="gF8-e7-8ck"/>
@@ -570,7 +632,6 @@
                                 <exclude reference="kOQ-D7-JPU"/>
                                 <exclude reference="qzT-5f-j2E"/>
                                 <exclude reference="t9e-Y5-Phk"/>
-                                <exclude reference="nUL-UK-Mie"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -579,6 +640,7 @@
                                 <include reference="pkV-Gg-Hgf"/>
                             </mask>
                             <mask key="constraints">
+                                <include reference="nUL-UK-Mie"/>
                                 <include reference="9M4-nS-Kb7"/>
                                 <include reference="SOh-b8-MrE"/>
                                 <include reference="gF8-e7-8ck"/>
@@ -589,7 +651,6 @@
                                 <include reference="kOQ-D7-JPU"/>
                                 <include reference="qzT-5f-j2E"/>
                                 <exclude reference="t9e-Y5-Phk"/>
-                                <include reference="nUL-UK-Mie"/>
                             </mask>
                         </variation>
                     </view>
@@ -597,6 +658,7 @@
                     <size key="freeformSize" width="375" height="800"/>
                     <connections>
                         <outlet property="bottomConstraint" destination="nUL-UK-Mie" id="jpD-sN-ZYL"/>
+                        <outlet property="textView" destination="9wS-zb-vj8" id="MSS-Ij-vE6"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="81Z-0c-aid" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1821,8 +1883,7 @@
                                         <exclude reference="CDz-Qk-4VC"/>
                                     </mask>
                                 </variation>
-                                <variation key="widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="16" y="135" width="339" height="187"/>
+                                <variation key="widthClass=compact">
                                     <mask key="constraints">
                                         <include reference="CDz-Qk-4VC"/>
                                     </mask>
@@ -2123,8 +2184,7 @@
                                         <exclude reference="sNC-SQ-nNj"/>
                                     </mask>
                                 </variation>
-                                <variation key="widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="0.0" y="339" width="375" height="239"/>
+                                <variation key="widthClass=compact">
                                     <mask key="subviews">
                                         <include reference="9vR-t7-Z9D"/>
                                         <include reference="40X-jf-YpM"/>
@@ -2165,8 +2225,7 @@
                                         <exclude reference="nBX-nE-nc3"/>
                                     </mask>
                                 </variation>
-                                <variation key="widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="16" y="77" width="339" height="21"/>
+                                <variation key="widthClass=compact">
                                     <mask key="constraints">
                                         <include reference="nBX-nE-nc3"/>
                                     </mask>
@@ -2185,8 +2244,7 @@
                                         <exclude reference="7q4-hF-958"/>
                                     </mask>
                                 </variation>
-                                <variation key="widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="16" y="99" width="61" height="21"/>
+                                <variation key="widthClass=compact">
                                     <mask key="constraints">
                                         <include reference="7q4-hF-958"/>
                                     </mask>
@@ -2205,8 +2263,7 @@
                                         <exclude reference="oGq-xh-qun"/>
                                     </mask>
                                 </variation>
-                                <variation key="widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="134" y="101" width="2" height="17"/>
+                                <variation key="widthClass=compact">
                                     <mask key="constraints">
                                         <include reference="oGq-xh-qun"/>
                                     </mask>
@@ -2225,8 +2282,7 @@
                                         <exclude reference="4pf-hv-754"/>
                                     </mask>
                                 </variation>
-                                <variation key="widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="143" y="99" width="44" height="21"/>
+                                <variation key="widthClass=compact">
                                     <mask key="constraints">
                                         <include reference="4pf-hv-754"/>
                                     </mask>
@@ -2237,9 +2293,6 @@
                                 <fontDescription key="fontDescription" name="AppleSDGothicNeo-SemiBold" family="Apple SD Gothic Neo" pointSize="12"/>
                                 <color key="textColor" red="0.51764705879999995" green="0.51764705879999995" blue="0.51764705879999995" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
-                                <variation key="widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="85" y="99" width="52" height="21"/>
-                                </variation>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="l" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WGn-zl-pvT" userLabel="div">
                                 <rect key="frame" x="-42" y="-21" width="42" height="21"/>
@@ -2256,8 +2309,7 @@
                                         <exclude reference="yT8-rf-KkG"/>
                                     </mask>
                                 </variation>
-                                <variation key="widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="77" y="101" width="10" height="17"/>
+                                <variation key="widthClass=compact">
                                     <mask key="constraints">
                                         <include reference="dXx-rv-JD9"/>
                                         <include reference="yT8-rf-KkG"/>
